--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "comic-downloader-bot",
-  "version": "2.0.0",
-  "description": "Bot de Discord que descarga cómics completos automáticamente y permite verlos página por página",
+  "name": "comic-bot",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+    "start": "node index.js"
   },
-  "author": "Tu nombre o nick",
-  "license": "MIT",
   "dependencies": {
     "discord.js": "^14.16.3",
     "axios": "^1.7.7",
     "jszip": "^3.10.1"
-  },
-  "engines": {
-    "node": ">=18.x"
   }
 }
