Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "mi-bot",
+  "name": "bot-descargador",
+  "version": "1.0.0",
+  "description": "Bot de Discord para descargar imágenes",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "axios": "^1.6.2",
+    "jszip": "^3.10.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
